--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ What are you doing here?! you sneaky developer...
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/canva-icon.webp" alt="bootstrap skill" class="tech-stack-logo" />
+              <img src="file/canva-icon.webp" alt="bootstrap skill" class="tech-stack-logo" />
               <span class="tooltip">CANVA</span>
             </li>
 
