--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ What are you doing here?! you sneaky developer...
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/4202035adobelogosocialsocialmedia-115653_115648.webp" alt="c language skill" class="tech-stack-logo" />
+              <img src="file/4202035adobelogosocialsocialmedia-115653_115648.webp" alt="c language skill" class="tech-stack-logo" />
               <span class="tooltip">ADOPE</span>
             </li>
             <!--
