--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@ What are you doing here?! you sneaky developer...
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/Adobe_Photoshop_Lightroom_CC_logo.svg.png" alt="react skill" class="tech-stack-logo" />
+              <img src="file/Adobe_Photoshop_Lightroom_CC_logo.svg.png" alt="react skill" class="tech-stack-logo" />
               <span class="tooltip">LIGHTROOM</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/DaVinci_Resolve_17_logo.svg.png" alt="github skill" class="tech-stack-logo needtobeinvert" />
+              <img src="file/file/DaVinci_Resolve_17_logo.svg.png" alt="github skill" class="tech-stack-logo needtobeinvert" />
               <span class="tooltip">DACINCI RESOLVE</span>
             </li>
 
