--- a/index.html
+++ b/index.html
@@ -334,17 +334,17 @@ What are you doing here?! you sneaky developer...
           </h3>
           <ul class="tech-stack-wrapper">
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/unnamed.png" alt="Html skill" class="tech-stack-logo" />
+              <img src="file/unnamed.png" alt="Html skill" class="tech-stack-logo" />
               <span class="tooltip">CAPCUT</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/Adobe_Photoshop_CC_icon.svg.png" alt="css skill" class="tech-stack-logo" />
+              <img src="file/Adobe_Photoshop_CC_icon.svg.png" alt="css skill" class="tech-stack-logo" />
               <span class="tooltip">PHOTOSHOP</span>
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file/Adobe_Premiere_Pro_CC_icon.svg.png" alt="js skill" class="tech-stack-logo" />
+              <img src="file/Adobe_Premiere_Pro_CC_icon.svg.png" alt="js skill" class="tech-stack-logo" />
               <span class="tooltip">PREMIERE PRO</span>
             </li>
 
@@ -364,7 +364,7 @@ What are you doing here?! you sneaky developer...
             </li>
 
             <li class="tech-stack-box" data-aos="fade-up">
-              <img src="file:///D:/portfolio/file//final_cut_pro_macos_bigsur_icon_190177.webp" alt="git skill" class="tech-stack-logo" />
+              <img src="file//final_cut_pro_macos_bigsur_icon_190177.webp" alt="git skill" class="tech-stack-logo" />
               <span class="tooltip">FINAL CUT PRO</span>
             </li>
 
