--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ What are you doing here?! you sneaky developer...
       <div class="hey">Hey!</div>
       <div class="logo" tabindex="0" aria-label="vinod jangid logo">
         <div class="logo-top">
-          <img src="file:///D:/portfolio/file/Subject.png" alt="animation-head" id="nav-avatar"/>
+          <img src="file/Subject.png" alt="animation-head" id="nav-avatar"/>
         </div>
       </div>
       <div class="navbar-tabs" id="navbar-tabs">
@@ -311,7 +311,7 @@ What are you doing here?! you sneaky developer...
           </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="file:///D:/portfolio/file/5ebdf5e3-9754-43e7-8e89-4ae2215ea90b.jpg" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+            <img src="file/5ebdf5e3-9754-43e7-8e89-4ae2215ea90b.jpg" alt="Jeni" tabindex="0" aria-label="image of jeni" />
           </div>
         </div>
       </div>
@@ -415,7 +415,7 @@ What are you doing here?! you sneaky developer...
           <div data-aos="fade-up" class="project-box-wrapper">
             <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
-                <img src="file:///D:/portfolio/file/Subject.png" alt="pexelicon website favicon" class="faviconforProject" />
+                <img src="file/Subject.png" alt="pexelicon website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Triple Jump</article>
                 <p class="ProjectDescription">
                   SGFI National games 2019: Won silver medal in TRIPLE JUMP by clearing 
@@ -425,7 +425,7 @@ What are you doing here?! you sneaky developer...
                 </div>
               </div>
               <div class="image-div">
-                <img src="file:///D:/portfolio/file/IMG_0206.jpg" alt="Pexelicon website preview image" />
+                <img src="file/IMG_0206.jpg" alt="Pexelicon website preview image" />
               </div>
             </div>
           </div>
@@ -433,7 +433,7 @@ What are you doing here?! you sneaky developer...
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box5" id="project-box5">
               <div class="info-div">
-                <img src="file:///D:/portfolio/file/Subject.png" alt="comickaze website favicon"
+                <img src="file/Subject.png" alt="comickaze website favicon"
                   class="faviconforProject" />
                 <article class="ProjectHeading">High Jump</article>
                 <p class="ProjectDescription">
@@ -444,7 +444,7 @@ What are you doing here?! you sneaky developer...
                 </div>
               </div>
               <div class="image-div">
-                <img src="file:///D:/portfolio/file/IMG_5777.jpg" alt="comickaze website preview image" />
+                <img src="file/IMG_5777.jpg" alt="comickaze website preview image" />
               </div>
             </div>
           </div>
@@ -453,7 +453,7 @@ What are you doing here?! you sneaky developer...
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box2" id="project-box2">
               <div class="info-div">
-                <img src="file:///D:/portfolio/file/Subject.png" alt="Aquaregia website favicon"
+                <img src="file/Subject.png" alt="Aquaregia website favicon"
                   class="faviconforProjectAquaregia" />
                 <article class="ProjectHeading">High Jump</article>
                 <p class="ProjectDescription">
@@ -463,7 +463,7 @@ What are you doing here?! you sneaky developer...
                 </div>
               </div>
               <div class="image-div">
-                <img src="file:///D:/portfolio/file/IMG_2059.jpg" alt="Aquaregia website preview image" />
+                <img src="file/IMG_2059.jpg" alt="Aquaregia website preview image" />
               </div>
             </div>
           </div>
@@ -471,7 +471,7 @@ What are you doing here?! you sneaky developer...
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box4" id="project-box4">
               <div class="info-div">
-                <img src="file:///D:/portfolio/file/Subject.png" alt="Qr generator website favicon" class="faviconforProject" />
+                <img src="file/Subject.png" alt="Qr generator website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">Triple Jump</article>
                 <p class="ProjectDescription">
                   Junior state athletic championships bronz medal in triple jump by clearing 15.35mts
@@ -480,7 +480,7 @@ What are you doing here?! you sneaky developer...
                 </div>
               </div>
               <div class="image-div">
-                <img src="file:///D:/portfolio/file/IMG_9776.jpg" alt="qr generator website preview image" />
+                <img src="file/IMG_9776.jpg" alt="qr generator website preview image" />
               </div>
             </div>
           </div>
@@ -489,7 +489,7 @@ What are you doing here?! you sneaky developer...
           <div class="project-box-wrapper" data-aos="fade-up">
             <div class="project-box project-box4" id="project-box4">
               <div class="info-div">
-                <img src="file:///D:/portfolio/file/Subject.png" alt="Qr generator website favicon" class="faviconforProject" />
+                <img src="file/Subject.png" alt="Qr generator website favicon" class="faviconforProject" />
                 <article class="ProjectHeading">High Jump</article>
                 <p class="ProjectDescription">
                   Under 23 Youth state bronz medal in high jump by clearing 2.01mts
@@ -498,7 +498,7 @@ What are you doing here?! you sneaky developer...
                 </div>
               </div>
               <div class="image-div">
-                <img src="file:///D:/portfolio/file/e110a24b-64ae-44a1-93b9-110e422b32e8.jpg" alt="qr generator website preview image" />
+                <img src="file/e110a24b-64ae-44a1-93b9-110e422b32e8.jpg" alt="qr generator website preview image" />
               </div>
             </div>
           </div>
@@ -549,7 +549,7 @@ What are you doing here?! you sneaky developer...
              
         </div>
         <div class="footer-avatar-container">
-          <img src="file:///D:/portfolio/file/Subject.png" alt="animation-head" class="footer-avatar-img" id="footer-wala-avatar"/>
+          <img src="file/Subject.png" alt="animation-head" class="footer-avatar-img" id="footer-wala-avatar"/>
           <div class="footer-avatar-face">
             <div class="footer-avatar-eye footer-left-eye">
               <div class="footer-pupil"></div>
